refactor(core): finalize monitoring integration, ML service and startup configuration